--- a/index.html
+++ b/index.html
@@ -3,24 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <body>
-      <div id="container">
-         <header>Register new account</header>
-         <form method="post">
+    <title>Register New Account</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        #container {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 300px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input[type="submit"] {
+            background: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div id="container">
+        <header><h2>Register New Account</h2></header>
+        <form method="post">
             <fieldset>
-               <br/>
-               <input type="text" name="username" id="username" placeholder="Username" required autofocus>
-               <br/><br/>
-               <input type="email" name="email" id="email" placeholder="E-mail" required>
-               <br/><br/>
-               <input type="password" name="password" id="password" placeholder="Password" required>
-               <br/><br/>
-               <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" required>
-               <br/> <br/> <br/>
-               <label for="submit"></label>
-               <input type="submit" name="submit" id="submit" value="REGISTER">
+                <input type="text" name="username" id="username" placeholder="Username" required autofocus>
+                <input type="email" name="email" id="email" placeholder="E-mail" required>
+                <input type="password" name="password" id="password" placeholder="Password" required>
+                <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" required>
+                <input type="submit" name="submit" id="submit" value="REGISTER">
             </fieldset>
-         </form>
-      </div>
-   </body>
+        </form>
+    </div>
+</body>
+</html>
